--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ github_username: p0rkjello
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
