--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: misctechmusings.com
 email: asbounds@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: "notebook for projects, problems, and solutions"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://misctechmusings.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: p0rkjello
+
+# Analytics
+google_analytics_id: UA-15151002-2
 
 # Build settings
 theme: minima
