--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+markdown: kramdown
+kramdown:
+  parse_block_html: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
