--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ github_username: p0rkjello
 # Analytics
 google_analytics_id: UA-15151002-2
 
+permalink: "/:categories/:slug"
+
 # Build settings
 theme: minima
 plugins:
