--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,11 @@ email: asbounds@gmail.com
 description: "notebook for projects, problems, and solutions"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://misctechmusings.com" # the base hostname & protocol for your site, e.g. http://example.com
+
 github_username: p0rkjello
+twitter_username: p0rkjello
+rss: rss
+author: "Andrew Bounds"
 
 google_analytics_id: UA-15151002-2
 
